--- a/src/components/chat-app.html
+++ b/src/components/chat-app.html
@@ -1,23 +1,10 @@
-<div class="row">
 
-      <div class="col s12 m4 l3 z-depth-1 flex"> <!-- Note that "m4 l3" was added -->
-        <h5>Channels</h5>
-        <ul class="collection">
-      <li class="collection-item">Alvin</li>
-      <li class="collection-item">Alvin</li>
-      <li class="collection-item">Alvin</li>
-      <li class="collection-item">Alvin</li>
-    </ul>
-      <div class="col s12 m8 l9 container">
-          goodbye
-        <!-- Note that "m8 l9" was added -->
-        <!-- Teal page content
+<style>
 
-              This content will be:
-          9-columns-wide on large screens,
-          8-columns-wide on medium screens,
-          12-columns-wide on small screens  -->
+</style>
 
-      </div>
+<div layout="flex">
 
-    </div>
+    <chat-channel-list [channel]="currentChannel"></chat-channel-list>
+    <chat-channel-viewer [channel]="currentChannel"></chat-channel-viewer>
+</div>
